# bevy_wasm

./: Cargo.toml  bacon.toml
.cargo/: config.toml
assets/sprites/: Andesite.aseprite  Dwarf.aseprite  Rock.aseprite  StackedTextures.aseprite
assets/ui/: Selector.aseprite
src/: lib.rs  main.rs
src/components/: map_coordinates.rs  mod.rs
src/domain/: mod.rs
