[package]
name = "bevy_wasm"
version = "0.1.0"
edition = "2024"

# yeah this is a lib now so I can embed it in a browser
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "native"
path = "src/main.rs"

[dependencies]
bevy = "0.17.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
wasm-bindgen = "0.2.106"

[dev-dependencies]
bacon = "3.20.1"
wasm-server-runner = "1.0.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
incremental = true
codegen-units = 1
# panic = "abort"
# strip = "symbols"
